fix for scrollbar moving layout - updated layout for interests

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,10 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
 
+html {
+  overflow-y: scroll;
+}
+
 body,
 html {
 	font-family: "Ubuntu Mono", monospace;
